--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
 body{
     background-color: rgb(22, 43, 43);
+    
+}
+
+.big-name{
+    font-size: 3.5rem;
+}
+
+.big-icons{
+    font-size: 5rem;
+}
+
+.purple-icon{
+    color: #7532F9;
+}
+
+.orange-icon{
+    color: #F26700;
+}
+
+.blue-icon{
+    color: #1F8EE7;
+}
+
+.yellow-icon{
+    color: #EAD41C;
+}
+
+.google-icon{
+    color: #3F7EE8;
 }
